dodana payara i baza danych

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>RepositoryAPI</module>
         <module>ListRepositoriesSPI</module>
         <module>MapRepositoriesSPI</module>
+        <module>REST</module>
     </modules>
 
     <properties>
